# thymio-tracker

./: .gitmodules  AUTHORS.md  CMakeLists.txt  DEMO.md  LICENSE.md  README.md  android.sh  arthymio.cpp  arthymio.h
NDKTest/: .gitignore  build.gradle
NDKTest/app/: build.gradle  proguard-rules.pro
NDKTest/app/src/androidTest/java/ch/epfl/cvlab/ndktest/: ApplicationTest.java
NDKTest/app/src/main/: AndroidManifest.xml
NDKTest/app/src/main/java/ch/epfl/cvlab/ndktest/: CalibratorActivity.java  MainActivity.java  TrackerActivity.java
NDKTest/app/src/main/java/org/mobsya/thymiovpl/: DashelSerial.java
NDKTest/app/src/main/res/layout/: activity_main.xml
NDKTest/app/src/main/res/values/: strings.xml  styles.xml
NDKTest/gradle/wrapper/: gradle-wrapper.properties
NDKTest/openCVLibrary300/: build.gradle
NDKTest/openCVLibrary300/src/main/java/org/opencv/android/: JavaCameraView.java
android/java/ch/epfl/cvlab/arthymio/: ARThymio.java
android/java/ch/epfl/cvlab/calibrator/: Calibrator.java
android/java/ch/epfl/cvlab/thymiotracker/: ThymioTracker.java
android/jni/: ch_epfl_cvlab_arthymio_ARThymio.cpp  ch_epfl_cvlab_calibrator_Calibrator.cpp  ch_epfl_cvlab_thymiotracker_ThymioTracker.cpp
data/: Config.xml  GH_Arth_Perspective.xml  GHscale_Arth_Perspective.xml  hut.xml  modelSurfaces.xml  oack.xml
data/calibration/: default_camera_calib.xml  embedded_camera_calib.xml  nexus_camera_calib.xml
data/robot/: robotTrackInfo.xml
scripts/: landmark.py
src/: BlobInertia.cpp  BlobInertia.hpp  Blobber.cpp  Calibrator.cpp  Calibrator.h  Calibrator.hpp  GH.cpp  GH.hpp  GHscale.cpp  GHscale.hpp  Generic.cpp  Generic.hpp  Grouping.cpp  Grouping.hpp  Landmark.cpp  Landmark.hpp  Models.cpp  Models.hpp  P3P.cpp  P3P.hpp  Robot.cpp  Robot.hpp  TODO  ThymioTracker.cpp  ThymioTracker.h  TrackingFcts.cpp  TrackingFcts.hpp  arthymio.cpp  arthymio.h
tests/: CMakeLists.txt  Visualization3D.cpp  Visualization3D.hpp  blobStat.cpp  calibrate.cpp  landmarks.cpp  onBoard.cpp  onBoardTrack.cpp  simuArthymio.cpp  testMITrack.cpp  tracker.cpp  trackerGH.cpp  trainGH.cpp
tests/common/: VideoSource.cpp  VideoSource.hpp  Visualization3D.cpp  Visualization3D.hpp
tools/: CMakeLists.txt  calibrate.cpp  landmark.cpp  learnSurfaces.cpp  trainGH.cpp
